fix: improve CORS configuration with wildcard origins and additional endpoints